--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,14 @@ plugins {
 //}
 
 android {
-    namespace 'com.lcodecore.tkrefreshlayout'
-    compileSdkVersion = 33
-    buildToolsVersion ='30.0.3'
+    // namespace 'com.lcodecore.tkrefreshlayout'
+    compileSdkVersion 31
+    buildToolsVersion '28.0.3 '
 
     defaultConfig {
+        //applicationId "com.lcodecore.tkrefreshlayout"
         minSdkVersion 14
-        targetSdkVersion 33
+        targetSdkVersion 31
         versionCode 7
         versionName "1.07"
     }
