--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,8 @@
 
 plugins {
     id 'com.android.library'
-//    id 'kotlin-android'
-//    id 'android-aspectjx'
-//    id 'kotlin-kapt'
+    id 'maven-publish'
 }
-
-//publish{
-//    userOrg = 'lcodecorex'
-//    groupId = 'com.lcodecorex'
-//    artifactId = 'tkrefreshlayout'
-//    publishVersion = '1.0.7'
-//    website = 'https://github.com/lcodecorex/TwinklingRefreshLayout/'
-//}
 
 android {
     // namespace 'com.lcodecore.tkrefreshlayout'
@@ -44,4 +34,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:recyclerview-v7:25.2.0'
     implementation 'com.android.support:support-v4:25.2.0'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.lcodecorex'
+                artifactId = 'tkrefreshlayout'
+                version = '1.0.7'
+                //website = 'https://github.com/lcodecorex/TwinklingRefreshLayout/'
+            }
+        }
+    }
 }
